unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_VJ_Invites__c/tspa__Visual_Remote_Assistant_VJ_Invites__c.object-meta.xml
<CustomObject>
    <label>Visual Remote Assistant-VJ Invite</label>
    <nameField>
        <displayFormat>VJ-{000000000}</displayFormat>
        <label>Visual Remote Assistant-VJ Invites Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant-VJ Invites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>