unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_VJ_Invites__c/fields/tspa__Alias__c.field-meta.xml
<CustomField>
    <fullName>tspa__Alias__c</fullName>
    <label>Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>