unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_VJ_Invites__c/fields/tspa__Client_Language__c.field-meta.xml
<CustomField>
    <fullName>tspa__Client_Language__c</fullName>
    <label>Client Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>