unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_VJ_Invites__c/fields/tspa__Mobile_Url__c.field-meta.xml
<CustomField>
    <fullName>tspa__Mobile_Url__c</fullName>
    <label>Mobile Url</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>