unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_VJ_Invites__c/fields/tspa__Refrenced_Id__c.field-meta.xml
<CustomField>
    <fullName>tspa__Refrenced_Id__c</fullName>
    <label>Refrenced Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>