unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_VJ_Invites__c/fields/tspa__Request_Id__c.field-meta.xml
<CustomField>
    <fullName>tspa__Request_Id__c</fullName>
    <label>Request Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>