unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_VJ_Invites__c/fields/tspa__Status_of_VJ__c.field-meta.xml
<CustomField>
    <fullName>tspa__Status_of_VJ__c</fullName>
    <label>Status of VJ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Ended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>