unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_VJ_Invites__c/fields/tspa__Tablet_URL__c.field-meta.xml
<CustomField>
    <fullName>tspa__Tablet_URL__c</fullName>
    <label>Tablet URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>