unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_VJ_Invites__c/fields/tspa__VJ_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>tspa__VJ_Job_Type__c</fullName>
    <label>VJ Job Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>