unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_VJ_Invites__c/listViews/tspa__All.listView-meta.xml
<ListView>
    <fullName>tspa__All</fullName>
    <columns>NAME</columns>
    <columns>tspa__Request_Id__c</columns>
    <columns>tspa__Session_Id__c</columns>
    <columns>tspa__Status_of_VJ__c</columns>
    <columns>tspa__VJ_Job_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>